feat: Add auth and sync functions
