# app/src/control/SyncController.ts
@@ -6,23 +6,19 @@ import type {
     MemoChangelogEntry,
     SettingChangelogEntry,
 } from "@/domain/Changelog"
+import type { SyncInfo } from "@/domain/SyncInfo"
+import { dataFromBase64, encodeToBase64 } from "@/lib/base64"
 import type { Context } from "@/lib/context"
 import type { Decrypter, Encrypter } from "@/lib/crypto"
 import type { DBExec, Transactioner } from "@/lib/database"
 import type { FS } from "@/lib/fs"
-import {
-    type AsyncResult,
-    Err,
-    Ok,
-    type Result,
-    fmtErr,
-    fromThrowing,
-} from "@/lib/result"
-import { decodeText, encodeText } from "@/lib/textencoding"
+import { parseJSON, parseJSONDate } from "@/lib/json"
+import { type AsyncResult, Err, Ok, type Result, fmtErr } from "@/lib/result"
+import { encodeText } from "@/lib/textencoding"
 
 export class SyncController {
-    public syncClientID: string
     private _transactioner: Transactioner
+    private _storage: Storage
     private _syncAPIClient: SyncAPIClient
     private _memos: Memo
     private _attachments: Attachments
@@ -33,8 +29,8 @@ export class SyncController {
     private _crypto: Encrypter & Decrypter
 
     constructor({
-        syncClientID,
         transactioner,
+        storage,
         syncAPIClient,
         memos,
         attachments,
@@ -44,8 +40,8 @@ export class SyncController {
         fs,
         crypto,
     }: {
-        syncClientID: string
         transactioner: Transactioner
+        storage: Storage
         syncAPIClient: SyncAPIClient
         memos: Memo
         attachments: Attachments
@@ -55,8 +51,8 @@ export class SyncController {
         fs: FS
         crypto: Encrypter & Decrypter
     }) {
-        this.syncClientID = syncClientID
         this._transactioner = transactioner
+        this._storage = storage
         this._syncAPIClient = syncAPIClient
         this._memos = memos
         this._attachments = attachments
@@ -67,35 +63,51 @@ export class SyncController {
         this._crypto = crypto
     }
 
-    public async applyChangelogEntries(ctx: Context): AsyncResult<void> {
-        let hasNextPage = true
-        let after: number | undefined
-        while (hasNextPage) {
-            let page = await this._changelog.listUnapplidChangelogEntries(
-                ctx.withData("db", undefined),
-                {
-                    pagination: {
-                        pageSize: 50,
-                        after,
-                    },
-                },
-            )
-            if (!page.ok) {
-                return page
-            }
+    public async init(
+        ctx: Context,
+        info: { server: string; clientID: string; username: string },
+    ): AsyncResult<void> {
+        this._syncAPIClient.setBaseURL(info.server)
+        return this._storage.saveSyncInfo(ctx, {
+            ...info,
+            isEnabled: true,
+        })
+    }
 
-            for (let entry of page.value.items) {
-                let applied = await this._applyChangelogEntry(ctx, entry)
-                if (!applied.ok) {
-                    return applied
-                }
-            }
-
-            after = page.value.next
-            hasNextPage = page.value.next !== undefined
+    public async load(ctx: Context): AsyncResult<SyncInfo | undefined> {
+        let info = await this._storage.loadSyncInfo(ctx)
+        if (!info.ok) {
+            return info
         }
 
-        return Ok(undefined)
+        if (info.value?.isEnabled) {
+            this._syncAPIClient.setBaseURL(info.value.server)
+        }
+
+        return Ok(info.value)
+    }
+
+    public async sync(ctx: Context): AsyncResult<void> {
+        return this._transactioner.inTransaction(ctx, async (ctx) => {
+            let serverChanges = await this._fetchChangelogEntries(ctx)
+            if (!serverChanges.ok) {
+                return serverChanges
+            }
+
+            let [applyChanges, uploaded] = await Promise.all([
+                this._applyChangelogEntries(ctx),
+                this._uploadChangelogEntries(ctx),
+            ])
+            if (!applyChanges.ok) {
+                return applyChanges
+            }
+
+            if (!uploaded.ok) {
+                return uploaded
+            }
+
+            return Ok(undefined)
+        })
     }
 
     public async fetchFullDB(ctx: Context): AsyncResult<void> {
@@ -147,7 +159,35 @@ export class SyncController {
         return this._syncAPIClient.uploadFullSyncData(ctx, encrypted.value)
     }
 
-    public async fetchChangelogEntries(
+    private async _applyChangelogEntries(ctx: Context): AsyncResult<void> {
+        let hasNextPage = true
+        let after: number | undefined
+        while (hasNextPage) {
+            let page = await this._changelog.listUnapplidChangelogEntries(ctx, {
+                pagination: {
+                    pageSize: 50,
+                    after,
+                },
+            })
+            if (!page.ok) {
+                return page
+            }
+
+            for (let entry of page.value.items) {
+                let applied = await this._applyChangelogEntry(ctx, entry)
+                if (!applied.ok) {
+                    return applied
+                }
+            }
+
+            after = page.value.next
+            hasNextPage = page.value.next !== undefined
+        }
+
+        return Ok(undefined)
+    }
+
+    private async _fetchChangelogEntries(
         ctx: Context,
         since?: Date,
     ): AsyncResult<void> {
@@ -167,29 +207,30 @@ export class SyncController {
         }
 
         return this._changelog.insertExternalChangelogEntries(
-            ctx.withData("db", undefined),
+            ctx,
             entries.value,
         )
     }
 
-    public async uploadChangelogEntries(ctx: Context): AsyncResult<void> {
+    private async _uploadChangelogEntries(ctx: Context): AsyncResult<void> {
         let hasNextPage = true
         let after: number | undefined
         while (hasNextPage) {
-            let page = await this._changelog.listUnsyncedChangelogEntries(
-                ctx.withData("db", undefined),
-                {
-                    pagination: {
-                        pageSize: 50,
-                        after,
-                    },
+            let page = await this._changelog.listUnsyncedChangelogEntries(ctx, {
+                pagination: {
+                    pageSize: 50,
+                    after,
                 },
-            )
+            })
             if (!page.ok) {
                 return page
             }
 
-            let uploaded = await this._uploadChangelogEntries(
+            if (page.value.items.length === 0) {
+                break
+            }
+
+            let uploaded = await this._uploadChangelogEntriesPage(
                 ctx,
                 page.value.items,
             )
@@ -204,10 +245,20 @@ export class SyncController {
         return Ok(undefined)
     }
 
-    private async _uploadChangelogEntries(
+    private async _uploadChangelogEntriesPage(
         ctx: Context,
         entries: ChangelogEntry[],
     ): AsyncResult<void> {
+        let syncInfo = await this._storage.loadSyncInfo(ctx)
+        if (!syncInfo.ok) {
+            return syncInfo
+        }
+        if (!syncInfo.value?.isEnabled) {
+            return Err(new Error("sync has not been setup yet"))
+        }
+
+        let clientID = syncInfo.value.clientID
+
         return this._transactioner.inTransaction(ctx, async (ctx) => {
             let marked = await this._changelog.markChangelogEntriesAsSynced(
                 ctx,
@@ -217,7 +268,10 @@ export class SyncController {
                 return marked
             }
 
-            let encryped = await this._encryptChangeLogEntries(entries)
+            let encryped = await this._encryptChangeLogEntries(
+                clientID,
+                entries,
+            )
             if (!encryped.ok) {
                 return encryped
             }
@@ -235,6 +289,7 @@ export class SyncController {
     }
 
     private async _encryptChangeLogEntries(
+        clientID: string,
         entries: ChangelogEntry[],
     ): AsyncResult<EncryptedChangelogEntry[]> {
         let encrytpedEntries: EncryptedChangelogEntry[] = []
@@ -248,8 +303,8 @@ export class SyncController {
             }
 
             encrytpedEntries.push({
-                syncClientID: this.syncClientID,
-                data: Buffer.from(encrypted.value).toString("base64"),
+                syncClientID: clientID,
+                data: encodeToBase64(new Uint8Array(encrypted.value)),
                 timestamp: entry.timestamp,
             })
         }
@@ -264,15 +319,38 @@ export class SyncController {
 
         for (let entry of encrytpedEntries) {
             let decrypted = await this._crypto.decryptData(
-                Buffer.from(entry.data, "base64"),
+                dataFromBase64(entry.data),
             )
             if (!decrypted.ok) {
                 return fmtErr("error decrytping changelog entry: %w", decrypted)
             }
 
-            let parsed = fromThrowing(() =>
-                JSON.parse(decodeText(new Uint8Array(decrypted.value))),
+            let parsed = parseJSON<ChangelogEntry, Record<string, any>>(
+                decrypted.value,
+                (obj) => {
+                    // let appliedAt = parseJSONDate(obj.appliedAt)
+                    // if (!appliedAt.ok) {
+                    //     return appliedAt
+                    // }
+                    let timestamp = parseJSONDate(obj.timestamp)
+                    if (!timestamp.ok) {
+                        return timestamp
+                    }
+
+                    return Ok({
+                        id: obj.id,
+                        source: obj.source,
+                        revision: obj.revision,
+                        targetType: obj.targetType,
+                        targetID: obj.targetID,
+                        value: obj.value,
+                        isSynced: true,
+                        isApplied: false,
+                        timestamp: timestamp.value,
+                    })
+                },
             )
+
             if (!parsed.ok) {
                 return parsed
             }
@@ -328,6 +406,7 @@ export class SyncController {
 }
 
 interface SyncAPIClient {
+    setBaseURL(baseUR: string): void
     getFullSync(ctx: Context): AsyncResult<ArrayBufferLike>
     uploadFullSyncData(ctx: Context, data: ArrayBufferLike): AsyncResult<void>
     listChangelogEntries(
@@ -338,6 +417,11 @@ interface SyncAPIClient {
         ctx: Context,
         entries: EncryptedChangelogEntry[],
     ): AsyncResult<void>
+}
+
+interface Storage {
+    loadSyncInfo(ctx: Context): AsyncResult<SyncInfo | undefined>
+    saveSyncInfo(ctx: Context, info: SyncInfo): AsyncResult<void>
 }
 
 interface Memo {
